# EProject

ELib/: ELib.sln
ELib/Android/app/: build.gradle
ELib/Android/app/src/androidTest/java/com/bhgame/elib/: ExampleInstrumentedTest.java
ELib/Android/app/src/main/: AndroidManifest.xml
ELib/Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ELib/Android/app/src/main/java/com/bhgame/elib/: MainActivity.java
ELib/Android/app/src/test/java/com/bhgame/elib/: ExampleUnitTest.java
ELib/Android/gradle/wrapper/: gradle-wrapper.properties
ELib/ELib/: ELib.vcxproj  ELib.vcxproj.filters  dllmain.cpp
ELib/ELib/NativeGraphics/: NativeGraphics.cpp  NativeGraphics.h  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_Metal.mm  RenderAPI_OpenGLCoreES.cpp  RenderAPI_Vulkan.cpp  RenderingPlugin.cpp  RenderingPlugin.h
ELib/ELib/Tangram/: TangramData.cpp  TangramData.h  TangramDetection.cpp  TangramDetection.h  TangramStates.cpp  TangramStates.h  TangramUtility.cpp  TangramUtility.h
ELib/ELib/Utility/: Interface.h  MD5.cpp  UnityInterface.cpp  UnityInterface.h
ELib/ELib/Utility/FSM/: FSM.h
ELib/ETest/: ETest.vcxproj  main.cpp
ELib/EUnityRenderLib/: EUnityRenderLib.vcxproj  EUnityRenderLib.vcxproj.filters
ELib/Unity/ELib/Assets/ELib/Materials/: TangramCamera.mat  WebCamera.mat
ELib/Unity/ELib/Assets/ELib/Plugins/: UnityInterface.cs
ELib/Unity/ELib/Assets/ELib/Scenes/: Demo.unity
ELib/Unity/ELib/Assets/ELib/Scripts/: ELibDemo.cs  TangramBaseCamera.cs  TangramMesh.cs  TangramRenderCamera.cs  TangramStaticTextureCamera.cs  TangramWebCamera.cs
ELib/Unity/ELib/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ELib/UnityNativeLoader/: UnityNativeLoader.cpp  UnityNativeLoader.def  UnityNativeLoader.h  UnityNativeLoader.vcxproj  UnityNativeLoader.vcxproj.filters  dllmain.cpp
ELib/UnityNativeLoader/Unity/: IUnityInterface.h
